2004-06-30  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/plustek/Makefile.kernel26: fixed floating point issues 
	  for SuSE kernels.

2004-06-28  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Microtek and Xerox
	  scanners.
	* tools/sane-desc.c: Added xml output (patch from 
	  jose <jgato@lambdaux.com>). Other minor fixes.
	
2004-06-28 m. allan noah <anoah at pfeiffer dot edu>
	* backend/fujitsu.c: use model code instead of string compare
	   submitted by: stan at saticed.me.uk

2004-06-21  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/descriptions/unsupported.desc: removed Compac S4 100 
	  (supported by the Plustek backend), added various Plustek
	  devices, changed OpticPro m12 to OpticSlim M12

2004-06-22  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/microtek2.c: Fixed some (but not all) MIN related
	  compilation warnings (bug #300823).
	* tools/sane-find-scanner.c: Look for NetBSD uscanner devices (bug
	  #300815).

2004-06-22  Rene Rebe <rene@rocklinux.org>
	* backend/avision.c, backend/avision.h, doc/sane-avision.man:
	  Fixed compilation warning (Bug #300399) and added a force-a3
	  option, needed for A3 scanner returning bogus scan area definitions

2004-06-21  Gerhard Jaeger <gerhard@gjaeger.de>
	* po/*.po: Updated according to upcomming changes in the plustek backend.

2004-06-20  Mattias Ellert <mattias.ellert@tsl.uu.se>
	* aclocal.m4, configure, sane/config.h.in, backend/Makefile.in, 
	  backend/agfafocus.c, backend/artec_eplus48u.c, backend/avision.c,
	  backend/coolscan.c, backend/fujitsu.c, backend/pie.c,
	  backend/plustek.c, backend/plustek_pp.c, backend/sp15c.c,
	  backend/tamarack.c, backend/u12.c
	* Fixing bug #300602 for the following backends: agfafocus,
	  artec_eplus48u, avision, coolscan, fujitsu, pie, plustek,
	  plustek_pp, sp15c, tamarack and u12
	* Migrating the avision backend to sanei_threads (bug #300631)

2004-06-19  Mattias Ellert <mattias.ellert@tsl.uu.se>